Added keepalive and fixed bug in canceled clients in roomsocket.
